Fixed overflow-x

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 
 * {
     scroll-behavior: smooth;
-    overflow-x: scroll;
+    overflow-x: hidden;
 }
 
 body {
